--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
-<html>
-    <head>
-        <title> Index</title>
-    </head>
-    <body>
-        <h4>Hola mundo desde mi HTML</h4>
-    </body>
-</html>
+{% extends 'base/base.html'%}
+
+{% block content %}
+
+    <p> Esto es parte del index</p>
+    <p>{{  name  }}</p>
+            
+{% endblock %}
+
