--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 {% extends 'base/base.html'%}
 
+{% block title %} {{  title  }} {% endblock %}
+
 {% block content %}
 
-    <p> Esto es parte del index</p>
-    <p>{{  name  }}</p>
-            
+    <h2>Hola Mundo.</h2>
+   
 {% endblock %}
 
