--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,13 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
-        <title> Titulo base</title>
-    </head>
-    <body>
-        <h4>Bienvenido al curso de flask desde base</h4>
- 
-        {% block content %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+             
+        <!--<script> src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyj5MfHj0MaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+       
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
 
+        <title> {% block title %} {% endblock %}</title>
+    </head>
+    <body> 
+        {% block content %}
         {% endblock %}
- 
+
+        <footer>
+            <div>
+                <div>
+                    <p class="copyright text-muted">&copy; Curso Flask 2019</p>
+                </div>
+            </div>
+        </footer>
+        
+        <img src="{{ url_for('static', filename='img/test.jpg') }}">
+
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+       
      </body>
 </html>
